Fixed Nommeweb-65 - Dish Menu Spacing
~search_list.css - Added flex display for table row styling.

--- a/WebRoot/index/css/search_list.css
+++ b/WebRoot/index/css/search_list.css
@@ -399,3 +399,10 @@ background-color: #69A81A;
 	width:45%;
 	margin-top:0;
 }
+.panel-body > .row{
+    display:flex;
+    flex-wrap:wrap;
+}
+.col-md-4{
+	flex-basis:33%;
+}
